Morosità - filter input field & Azioni icons - fix alignment & styling

--- a/src/app/features/morosita/morosita.component.css
+++ b/src/app/features/morosita/morosita.component.css
@@ -1,12 +1,26 @@
 table {
-    border-color: #0075bf;
-    text-align: center;
-  }
-  th {
-    font-size: 16px;
-  }
-  td {
-    padding: 10px 20px;
-    font-size: 14px;
-  }
+  border-color: #0075bf;
+  text-align: center;
+}
+th {
+  font-size: 16px;
+}
+td {
+  padding: 10px 20px;
+  font-size: 14px;
+}
 
+i {
+  font-size: 20px;
+}
+
+.select-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.select-wrapper label {
+  font-size: inherit;
+  font-weight: 500;
+  transform: translateY(-20%);
+}
